--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "npm run migration:generate && npm run migration:push",
+    "migration:generate": "drizzle-kit generate:mysql",
+    "migration:push": "node -r esbuild-register src/db/migrate.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "clsx": "^2.1.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
     "geist": "^1.2.0",
+    "mysql2": "^3.6.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.9",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
