--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "migrate": "npm run migration:generate && npm run migration:push",
     "migration:generate": "drizzle-kit generate:mysql",
-    "migration:push": "node -r esbuild-register src/db/migrate.ts"
+    "migration:push": "node -r esbuild-register src/db/migrate.ts",
+    "seed": "node -r esbuild-register src/db/seeds/seed-db.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
