Moved all database seeders in a single entry file; corrected the targeted file in the npm script for seeding the database

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate": "npm run migration:generate && npm run migration:push",
     "migration:generate": "drizzle-kit generate:mysql",
     "migration:push": "node -r esbuild-register src/db/migrate.ts",
-    "seed": "node -r esbuild-register src/db/seeds/seed-db.ts"
+    "seed": "node -r esbuild-register src/db/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
