--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
