--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
@@ -21,6 +22,7 @@
     "geist": "^1.2.0",
     "mysql2": "^3.6.5",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
