--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "geist": "^1.2.0",
+    "jose": "^5.2.0",
     "mysql2": "^3.6.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.8",
