--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
