--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
+    "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "jose": "^5.2.0",
     "mysql2": "^3.6.5",
