--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tiptap/pm": "^2.2.2",
+    "@tiptap/react": "^2.2.2",
+    "@tiptap/starter-kit": "^2.2.2",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
