--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@tiptap/starter-kit": "^2.2.2",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "jose": "^5.2.0",
+    "lucide-react": "^0.323.0",
     "mysql2": "^3.6.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.8",
@@ -34,7 +36,8 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
