--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tiptap/extension-character-count": "^2.2.2",
+    "@tiptap/extension-placeholder": "^2.2.2",
+    "@tiptap/extension-text-align": "^2.2.2",
+    "@tiptap/extension-typography": "^2.2.2",
+    "@tiptap/extension-underline": "^2.2.2",
     "@tiptap/pm": "^2.2.2",
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
