--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
     "@types/nodemailer": "^6.4.14",
+    "@uploadthing/react": "^6.2.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -52,6 +53,7 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
