Updated the example ENV file to include blank fields for Uploadthing's 'secret' and 'app_id'

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ GMAIL_APP_PASSWORD=
 # JWT
 JWT_ACCESS_TOKEN_SECRET_KEY=
 JWT_REFRESH_TOKEN_SECRET_KEY=
+
+# Uploadthing
+UPLOADTHING_SECRET=
+UPLOADTHING_APP_ID=
