--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -43,6 +45,7 @@
     "geist": "^1.2.0",
     "jose": "^5.2.0",
     "lucide-react": "^0.323.0",
+    "match-sorter": "^6.3.4",
     "mysql2": "^3.6.5",
     "next": "14.0.4",
     "nodemailer": "^6.9.8",
