--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.3.3",
+    "uploadthing": "6.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
