--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^10.18.0",
